<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/list_groups"
        android:orderInCategory="1"
        android:icon="@drawable/view_list"
        android:id="@+id/listOfGroups"
        />

    <item
        android:title="@string/my_lessons"
        android:orderInCategory="1"
        android:icon="@drawable/account"
        android:id="@+id/myLessonsItem"
        />

    <item
        android:title="@string/notifyMessages"
        android:orderInCategory="1"
        android:id="@+id/notificationItem"
        android:icon="@drawable/message_text" />

    <item
        android:title="@string/setting"
        android:orderInCategory="1"
        android:id="@+id/settings"
        android:icon="@drawable/settings" />

    <!--<item-->
        <!--android:title="@string/messageAboutError"-->
        <!--android:orderInCategory="1"-->
        <!--android:icon="@drawable/alert_circle" />-->

    <item
        android:title="@string/about_app"
        android:orderInCategory="1"
        android:id="@+id/aboutApp"
        android:icon="@drawable/home" />
</menu>